[package]
name = "rusty-horse"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
async-compression = { version = "0.4.6", features = ["tokio", "gzip"] }
clap = { version = "4.5.3", features = ["derive"] }
csv-async = { version = "1.3.0", features = ["tokio"] }
dialoguer = { version = "0.11.0", default-features = false, features = ["fuzzy-select"] }
futures = "0.3.30"
indicatif = { version = "0.17.8" }
log = "0.4.21"
rayon = "1.9.0"
reqwest = { version = "0.11.27", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0.197", features = ["derive"] }
syslog = "6.1.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["io"] }

[features]
# Enable trace logging level for extra debugging verbosity
log-trace = []
